css/layout.css
/* ... */
.language-item {
   padding: 0;
   margin-bottom: 0;
}


/* ------------------------------------------------------------------ */
/* e. Projets Section
/* ------------------------------------------------------------------ */

#projets h1 {
   font: 18px 'opensans-bold', sans-serif;
   text-transform: uppercase;
   letter-spacing: 1px;
}

#projets h1 span {
   border-bottom: 3px solid #F06000;
   padding-bottom: 6px;
}

#projets {
   background: #ffffff;
   padding-top: 50px;
   padding-bottom: 50px;
}

.imageinfo img{
   z-index:1;
   position:absolute;
   cursor: help;
   height: 28px;
   right:18px;
   top:4px;
 }
 
 .imageinfotext {
   visibility: hidden;
   width: 220px;
   font-size:12px;
   line-height: 20px;
   background-color: #222;
   color: #fff;
   text-align: center;
   border-radius: 6px;
   right:20px;
   overflow: hidden;
   position:absolute;
   z-index: 2;
 }
 
 @keyframes showinfo {
   0%   {height: 0px; top: -1px; opacity: 0;}
   100% {height: 40px; top: -41px; opacity: 1;}
 }

 .imageinfo:hover .imageinfotext {
   visibility: visible;
   animation: showinfo 0.4s forwards;
 }

/* Portfolio Content */
#projets-wrapper .columns {
   margin-bottom: 48px;
}


.projets-item {
   padding: 0 20px 0 0;
}

.projets-item .item-wrap {
   background: #fff;
   overflow: hidden;
   position: relative;

   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
}

.projets-item .item-wrap a {
   display: block;
   cursor: pointer;
}

/* overlay */
.projets-item .item-wrap .overlay {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;

   opacity: 0;
   -moz-opacity: 0;
   filter: alpha(opacity=0);

   -webkit-transition: opacity 0.3s ease-in-out;
   -moz-transition: opacity 0.3s ease-in-out;
   -o-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;

   background: url(../images/overlay-bg.png) repeat;
}

.projets-item .item-wrap .link-icon {
   display: block;
   color: #fff;
   height: 30px;
   width: 30px;
   font-size: 18px;
   line-height: 30px;
   text-align: center;

   opacity: 0;
   -moz-opacity: 0;
   filter: alpha(opacity=0);

   -webkit-transition: opacity 0.3s ease-in-out;
   -moz-transition: opacity 0.3s ease-in-out;
   -o-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;

   position: absolute;
   top: 50%;
   left: 50%;
   margin-left: -15px;
   margin-top: -15px;
}

.projets-item .item-wrap img {
   vertical-align: bottom;
}

.projets-item .projets-item-meta {
   padding: 12px;
}

.projets-item .projets-item-meta h5 {
   font: 14px/21px 'opensans-bold', sans-serif;
   color: #fff;
}

.projets-item .projets-item-meta p {
   font: 12px/18px 'opensans-light', sans-serif;
   color: #c6c7c7;
   margin-bottom: 0;
}

/* on hover */
.projets-item:hover .overlay {
   opacity: 1;
   -moz-opacity: 1;
   filter: alpha(opacity=100);
}

.projets-item:hover .link-icon {
   opacity: 1;
   -moz-opacity: 1;
   filter: alpha(opacity=100);
}

/* popup modal */

.blink {
   animation: blink linear  1.2s 3;
 }

 @keyframes blink { 
   0% { opacity:1; }
   25% { opacity:0.8; }
   50% { opacity:0.2; } 
   75% { opacity:0.8; } 
   100% { opacity:1; }
 }

.popup-modal {
   max-width: 550px;
   background: #fff;
   position: relative;
   margin: 0 auto;
}

.popup-modal .description-box {
   padding: 12px 36px 18px 36px;
}

.popup-modal .description-box h4 {
   font: 15px/24px 'opensans-bold', sans-serif;
   margin-bottom: 12px;
   color: #111;
}

.popup-modal .description-box p {
   font: 14px/24px 'opensans-regular', sans-serif;
   color: #888888;
   margin-bottom: 12px;
   text-align: justify;
}

.popup-modal .description-box .categories {
   font: 11px/21px 'opensans-light', sans-serif;
   color: #888888;
   text-transform: uppercase;
   letter-spacing: 2px;
   display: block;
   text-align: left;
}

.popup-modal .description-box .categories i {
   margin-right: 8px;
}

.popup-modal .link-box {
   padding: 18px 36px;
   background: #111;
   text-align: left;
}

.popup-modal .link-box a {
   color: #fff;
   font: 18px 'opensans-bold', sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
   cursor: pointer;
}

.popup-modal a:hover {
   color: #F06000;
}

.popup-modal a.popup-modal-dismiss {
   margin-left: 24px;
}


/* fadein/fadeout effect for modal popup
/* ------------------------------------------------------------------ */

/* content at start */
.mfp-fade.mfp-wrap .mfp-content .popup-modal {
   opacity: 0;
   -webkit-transition: all 200ms ease-in-out;
   -moz-transition: all 200ms ease-in-out;
   -o-transition: all 200ms ease-in-out;
   -ms-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
}

/* content fadein */
.mfp-fade.mfp-wrap.mfp-ready .mfp-content .popup-modal {
   opacity: 1;
}

/* content fadeout */
.mfp-fade.mfp-wrap.mfp-removing .mfp-content .popup-modal {
   opacity: 0;
}

/* ------------------------------------------------------------------
/* g. Citations
/* ------------------------------------------------------------------ */

#citations {
   background: #1F1F1F url(../images/citations-bg.jpg) no-repeat center center;
   background-size: cover !important;
   -webkit-background-size: cover !important;
   background-attachment: fixed;
   position: relative;
   min-height: 200px;
   width: 100%;
   overflow: hidden;
}

#citations p{
margin-bottom: 0px;
}


#citations .text-container {
   padding-top: 96px;
   padding-bottom: 66px;
}

#citations h1 {
   font: 18px/24px 'opensans-bold', sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
   color: #fff;
}

#citations h1 span {
   display: none;
}

#citations .header-col {
   padding-top: 9px;
}
/* ... */

